--- a/WeatherApp/Properties/launchSettings.json
+++ b/WeatherApp/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7250;http://localhost:5250",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "WEATHERAPP_KEY": "af5bcb9ea1e67227ac9c7ae49d00eab1"
       }
     },
     "IIS Express": {
